# upystar

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
python/upystar/: __init__.py
scripts/: build.sh
src/: lib.rs
tests/: test_basic_validation.py
tests/snapshots/test_basic_validation/test_validate_semicolon_text/: semicolon_text_result.txt
tests/test_data/: simple.nef
